--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -42,6 +42,12 @@
     height: 275px;
     margin: 0 auto 2rem;
   }
+  .section__pic-container img{
+    width: 275px;
+    /* height: 400px; */
+    border-radius: unset;
+    object-fit: cover;
+  }
   .about-containers {
     margin-top: 0;
   }
