--- a/style.css
+++ b/style.css
@@ -430,3 +430,13 @@ footer {
 footer p {
   text-align: center;
 }
+
+
+/* my code 0 */
+
+.section__pic-container img{
+  width: 400px;
+  /* height: 400px; */
+  border-radius: 100%;
+  object-fit: cover;
+}
